@@ -1,34 +1,43 @@
 package dev.jinkela.demo.jinkelademo.datas;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
+import org.reflections.Reflections;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.convert.converter.Converter;
 import org.springframework.data.convert.ReadingConverter;
 import org.springframework.data.convert.WritingConverter;
 import org.springframework.data.domain.AuditorAware;
 import org.springframework.data.jdbc.repository.config.AbstractJdbcConfiguration;
 import org.springframework.data.jdbc.repository.config.EnableJdbcAuditing;
 import org.springframework.data.jdbc.repository.config.EnableJdbcRepositories;
+import org.springframework.data.util.ReflectionUtils;
 import org.springframework.data.util.TypeScanner;
 import org.springframework.data.web.config.PageableHandlerMethodArgumentResolverCustomizer;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcOperations;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.jdbc.datasource.DataSourceTransactionManager;
+import org.springframework.jdbc.support.SQLErrorCodeSQLExceptionTranslator;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.ReactiveSecurityContextHolder;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.transaction.TransactionManager;
 
+import cn.hutool.core.util.ReflectUtil;
+import dev.jinkela.demo.jinkelademo.datas.converters.EnabledToStringWritingConverter;
+import dev.jinkela.demo.jinkelademo.datas.converters.StringToEnabledReadingConverter;
 import dev.jinkela.demo.jinkelademo.datas.entities.JinkelaUser;
 import io.vavr.control.Try;
+import lombok.SneakyThrows;
 
 @Configuration
 @EnableJdbcAuditing(auditorAwareRef = "auditorAwareRef")
@@ -37,20 +46,12 @@ class JinkelaDataConfiguration extends AbstractJdbcConfiguration {
 
   @Bean
   AuditorAware<String> auditorAwareRef() {
-    return new AuditorAware<String>() {
-
-      @Override
-      public Optional<String> getCurrentAuditor() {
-        return Optional.ofNullable(SecurityContextHolder.getContext())
-            .map(SecurityContext::getAuthentication)
-            .filter(Authentication::isAuthenticated)
-            .map(Authentication::getPrincipal)
-            .map(JinkelaUser.class::cast)
-            .map(it -> String.valueOf(it.getId()));
-      }
-
-    };
-
+    return () -> Optional.ofNullable(SecurityContextHolder.getContext())
+        .map(SecurityContext::getAuthentication)
+        .filter(Authentication::isAuthenticated)
+        .map(Authentication::getPrincipal)
+        .map(JinkelaUser.class::cast)
+        .map(it -> String.valueOf(it.getId()));
   }
 
   @Bean
@@ -60,7 +61,10 @@ class JinkelaDataConfiguration extends AbstractJdbcConfiguration {
 
   @Bean
   NamedParameterJdbcOperations namedParameterJdbcOperations(DataSource dataSource) {
-    return new NamedParameterJdbcTemplate(dataSource);
+    var namedParameterJdbcTemplate = new NamedParameterJdbcTemplate(dataSource);
+    // namedParameterJdbcTemplate.getJdbcTemplate().setExceptionTranslator(new
+    // SQLErrorCodeSQLExceptionTranslator());
+    return namedParameterJdbcTemplate;
   }
 
   @Bean
@@ -80,10 +84,9 @@ class JinkelaDataConfiguration extends AbstractJdbcConfiguration {
 
   @Override
   protected List<?> userConverters() {
-    Set<Class<?>> classes = TypeScanner.typeScanner(AbstractJdbcConfiguration.class.getClassLoader()) //
-        .forTypesAnnotatedWith(WritingConverter.class, ReadingConverter.class) //
-        .scanPackages("dev.jinkela.demo.jinkelademo.datas.converters") //
-        .collectAsSet();
-    return classes.stream().map(it -> Try.of(() -> it.getDeclaredConstructor().newInstance()).get()).toList();
+    return new Reflections("dev.jinkela.demo.jinkelademo.datas.converters")
+        .getSubTypesOf(Converter.class)
+        .stream().map(it -> Try.of(() -> ReflectUtil.newInstance(it)).get()).collect(Collectors.toList());
+
   }
 }
